# blog

./: .gitignore  README.md  nixpkgs.nix
client/: Main.hs  client.cabal  default.nix  result  shell.nix
client/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
client/jsbits/: main.js
common/: .gitignore  Action.hs  Common.hs  Model.hs  Routes.hs  Utils.hs  common.cabal  default.nix  home-v12.html  result
common/Views/: About.hs  Contact.hs  Footer.hs  Header.hs  Home.hs  Template.hs  Wedding.hs
common/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
common/dist-newstyle/packagedb/ghc-8.6.4/: common-0.1.0.0-inplace.conf  package.cache
nix/: hls.nix  sources.json
server/: .gitignore  Auth.hs  Html.hs  InMemory.Auth.hs  InMemory.hs  InMemoryTest.hs  Main.hs  Validation.hs  default.nix  result  server.cabal
server/Adapter/: DB.hs  InMemory.hs  InMemoryTest.hs
server/Adapter/Database/: Database.hs
server/Adapter/Database/Migrations/: create-post-tags.sql  create-posts.sql  create-tags.sql
server/Adapter/Post/: API.hs  Database.hs  Types.hs
server/Domain/: Auth.hs  Post.hs  Validation.hs
server/Http/API/: Post.hs
server/Http/Api/: Post.hs
server/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
server/static/: all.js
server/static/css/: bootstrap.min.css  style.css
server/static/images/: Thumbs.db
server/static/js/: functions.js
