name:               server
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10
license:            PublicDomain

executable server
  if impl(ghcjs)
    buildable: False

  main-is:          Main.hs
  ghc-options:      -O2 -threaded -Wall
  default-language: Haskell2010
  other-modules:    Html,
                    Auth,
                    Validation
  build-depends:    aeson,
                    base < 5,
                    common,
                    containers,
                    classy-prelude,
                    http-types,
                    katip,
                    pcre-heavy,
                    lens,
                    lucid,
                    miso,
                    mtl,
                    mono-traversable,
                    network-uri,
                    servant,
                    servant-lucid,
                    servant-server,
                    string-random,
                    stm,
                    text,
                    wai,
                    wai-extra,
                    warp

