name:               server
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10
license:            PublicDomain

executable server
  if impl(ghcjs)
    buildable: False

  main-is:          Main.hs
  ghc-options:      -O2 -threaded -Wall
  default-language: Haskell2010
  other-modules:    Html,
                    Domain.Auth,
                    Domain.Validation,
                    Domain.Post,
                    Adapter.Database.Database,
                    Adapter.Post.API,
                    Adapter.Post.Database,
                    Adapter.Post.Types,
                    Adapter.InMemory,
                    Adapter.InMemoryTest
  build-depends:    aeson,
                    base < 5,
                    beam-core,
                    beam-postgres,
                    bytestring,
                    common,
                    containers,
                    classy-prelude,
                    exceptions,
                    http-types,
                    katip,
                    pcre-heavy,
                    postgresql-simple,
                    resource-pool,
                    lens,
                    lens-aeson,
                    lucid,
                    miso,
                    mtl,
                    mono-traversable,
                    network-uri,
                    servant,
                    servant-lucid,
                    servant-server,
                    string-random,
                    stm,
                    text,
                    time,
                    uuid,
                    wai,
                    wai-extra,
                    warp,
                    wreq

